# python-pytest-playwright-ui-api-llm-test-framework

./: .gitignore  .pylintrc  README.md  conftest.py  main.py  openapi_spec.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
config/: config.yaml
framework/base/: base_test.py
framework/pages/: base_page.py  calculators_page.py  dashboard_page.py  goals_page.py  home_page.py  login_page.py  portfolio_page.py  register_page.py  sidebar_pages.py
framework/utils/: config_reader.py  logger.py
tests/api/: api_client.py  conftest.py  test_auth_api.py  test_budget_api.py  test_goals_api.py  test_portfolio_api.py  test_risk_profile_api.py  test_sip_api.py  test_swp_api.py
tests/web/: test_calculators.py  test_dashboard_features.py  test_debug_portfolio_button.py  test_goals_feature.py  test_logger.py  test_multi_browser.py  test_portfolio_integration.py  test_register_flow.py  test_sample.py  test_sidebar_content.py  test_wealth_app.py
