[project]
name = "python-pytest-playwright-ui-api-llm-test-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.55.0",
    "requests>=2.32.5",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "pytest>=8.4.2",
    "pytest-asyncio==0.25.0",
    "pytest-xdist>=3.5.0",
    "allure-pytest>=2.15.0",
]

[dependency-groups]
dev = [
    "black>=24.3.0",
    "isort>=5.13.2",
    "pylint>=3.1.0",
    "pre-commit>=3.6.2",
]
